Added in missing searches, added checks