@@ -8,7 +8,9 @@ import java.util.Scanner;
 import java.util.regex.Pattern;
 
 import daos.*;
+import models.Song;
 import models.User;
+import models.Artist;
 
 public class OLD_Main {
     private static String dbUrl = "";
@@ -58,7 +60,8 @@ public class OLD_Main {
                     System.out.println("1: Your Library");
                     System.out.println("2: Mighty Musical Musers Social™");
                     System.out.println("3: Search");
-                    System.out.println("4: log out");
+                    System.out.println("4: Rate a Song!");
+                    System.out.println("5: Log out");
                     int uoption = in.nextInt();
                     in.nextLine();
                     switch (uoption) {
@@ -87,7 +90,7 @@ public class OLD_Main {
                                     PlayHistoryDAO.playPlaylist(conn, logged_in.getUsername(), inp);
                                     break;
                                 case 3:
-                                    System.out.println("Please enter a song name  to play");
+                                    System.out.println("Please enter a song name to play");
                                     inp = in.nextLine();
                                     PlayHistoryDAO.playPlaylist(conn, logged_in.getUsername(), inp);
                                     break;
@@ -129,15 +132,15 @@ public class OLD_Main {
                                     PlaylistDAO.deletePlaylist(conn, logged_in.getUsername(), inp);
                                     break;
                             }
-
+                            break;
                         case 2:
                             System.out.println("MIGHT MUSICAL MUSERS SOCIAL™");
                             System.out.println("-----------------------------");
                             System.out.println("Please choose from one of the options below:");
-                            System.out.println("1: follow user");
-                            System.out.println("2: unfollow user");
-                            System.out.println("3: follow artist");
-                            System.out.println("4: unfollow artist");
+                            System.out.println("1: Follow user");
+                            System.out.println("2: Unfollow user");
+                            System.out.println("3: Follow artist");
+                            System.out.println("4: Unfollow artist");
                             int socialChoice = in.nextInt();
                             in.nextLine();
                             String socialInp;
@@ -166,12 +169,55 @@ public class OLD_Main {
                                     ArtistDAO.unfollowArtist(conn, logged_in.getUsername(), artistID);
                                     break;
                             }
+                            break;
                         case 3:
+                            System.out.println("What would you like to search for?");
+                            System.out.println("1. Search for Songs!");
+                            System.out.println("2. Search for Users!");
+                            System.out.println("3. Search for Artists!");
+                            int searchChoice = in.nextInt();
+
+                            switch (searchChoice) {
+                                case 1:
+                                    songSearcher(conn);
+                                    break;
+                                case 2:
+                                    userSearcher(conn, logged_in);
+                                    break;
+                                case 3:
+                                    artistSearcher(conn, logged_in);
+                                    break;
+                            }
+                            break;
+                        case 4:
+                            // Performs the rating for songs
+                            System.out.println("Please enter the name of the song you wish to rate:");
+                            String song_name = in.nextLine();
+                            List<Song> songs = daos.SongDAO.getSong(conn, song_name);
+                            int song_Num = 1;
+                            if(!songs.isEmpty()){
+                                System.out.println("Choose the correct song to be rated.");
+                                System.out.println("These are the songs with that name: ");
+                                do {
+                                    System.out.println(song_Num + ": " + songs.get(song_Num - 1));
+                                    song_Num += 1;
+                                } while (song_Num != songs.size());
+                                int choice = in.nextInt();
+
+                                System.out.println("What would you like to rate this song? [From 1 - 5 Stars]");
+                                int rating = in.nextInt();
+                                daos.RatingDAO.rateSong(conn, songs.get(choice - 1), logged_in, rating);
+
+                            }
+                            break;
+                        case 5:
                             System.out.println("Goodbye, "+logged_in.getUsername()+" see you next time!");
                             logged_in = null;
+                            break;
                     }
                     // Options for when user is not logged in (Login and Create Account)
                 } else {
+                    System.out.println("You are not currently logged in.");
                     System.out.println("Please choose from one of the options below:");
                     System.out.println("1: Log in");
                     System.out.println("2: Create Account");
@@ -180,15 +226,36 @@ public class OLD_Main {
                     String username, password;
                     switch (option) {
                         case 1: //login
-                            System.out.println("Logging in:");
-                            System.out.println("Please input your username: ");
-                            username = in.nextLine();
-                            System.out.println("Please input your password: ");
-                            password = in.nextLine();
+                            boolean successful = false;
+                            while (!successful){
+                                System.out.println("Please input your username: ");
+                                username = in.nextLine();
+                                System.out.println("Please input your password: ");
+                                password = in.nextLine();
 
-                            UserDAO.login(conn, username, password);
-                            logged_in = UserDAO.searchUsersByUsername(conn, username).get(0);
-                            //TODO add checks if the login information doesn't exist
+                                successful = UserDAO.login(conn, username, password);
+                                if(!successful){
+                                    System.out.println("Username or password was incorrect.");
+                                    System.out.println("Please try again, or enter q to stop the login process.");
+                                } else {
+                                    List<User> users = UserDAO.searchUsersByUsername(conn, username);
+                                    if(users.isEmpty()){
+                                        System.out.println("No Users were found with that username.");
+                                        System.out.println("Please try again, or enter q to stop the login process.");
+                                    } else {
+                                        logged_in = users.getFirst();
+                                        System.out.println("Successfully logged in!");
+                                    }
+                                }
+
+                                String exit = in.nextLine();
+                                if(exit.equals("q")){
+                                    // Way to exit the loop without confusing breaks, simply states that process is
+                                    // done, and loop will exit without logged_in being set: logged_in = null
+                                    successful = true;
+                                }
+                            }
+
                             break;
                         case 2: //create acc
                             final Pattern EMAIL_PATTERN = Pattern.compile("^[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\\.[A-Za-z]{2,}$", Pattern.CASE_INSENSITIVE);
@@ -196,8 +263,18 @@ public class OLD_Main {
 
                             System.out.println("Registering account...");
 
-                            System.out.println("Please enter a username:");
-                            username = in.nextLine();
+                            while(true){
+                                System.out.println("Please enter a username:");
+                                username = in.nextLine();
+
+                                List<User> users = UserDAO.searchUsersByUsername(conn, username);
+                                if(!users.isEmpty()){
+                                    System.out.println("That username is already being used.");
+                                    System.out.println("Please enter another username.");
+                                } else {
+                                    break;
+                                }
+                            }
 
                             String pword;
                             while (true) {
@@ -259,10 +336,23 @@ public class OLD_Main {
                             UserDAO.registerUser(conn, logged_in);
                             break;
                         case 3: //search
-                            //TODO implement all search functionalities:
-                            // - song search
-                            // - user search
-                            // - artist search
+                            System.out.println("What would you like to search for?");
+                            System.out.println("1. Search for Songs!");
+                            System.out.println("2. Search for Users!");
+                            System.out.println("3. Search for Artists!");
+                            int searchChoice = in.nextInt();
+
+                            switch (searchChoice) {
+                                case 1:
+                                    songSearcher(conn);
+                                    break;
+                                case 2:
+                                    userSearcher(conn, logged_in);
+                                    break;
+                                case 3:
+                                    artistSearcher(conn, logged_in);
+                                    break;
+                            }
                             break;
                     }
                 }
@@ -277,15 +367,14 @@ public class OLD_Main {
         }
     }
 
-    public static void searchHelperFunction(Connection conn){
-        Scanner in = new Scanner(System.in);
-        System.out.println("How would you like to search?");
+    public static void songSearcher(Connection conn){
+        System.out.println("How would you like to search for a song?");
         System.out.println("1: By Song title");
         System.out.println("2: By Artist name");
         System.out.println("3: By Album name");
         System.out.println("4: By Genre name");
         int option = in.nextInt();
-        String typeCase;
+        String typeCase = "";
 
         switch (option) {
             case 1:
@@ -304,29 +393,95 @@ public class OLD_Main {
                 System.out.println("Enter the Genre of songs you're searching for:");
                 typeCase = "genre";
                 break;
+            default:
+                System.out.println("That was not an available option.");
         }
-
         String keyword = in.nextLine();
-        System.out.println("How would you like to search?");
-        System.out.println("1: Song Title");
-        System.out.println("2: Artist Name");
-        System.out.println("3: Album Name");
-        System.out.println("4: Release Year");
-        option = in.nextInt();
-        String typeSearch;
 
-        switch (option) {
+        System.out.println("How would you like to sort these songs?");
+        System.out.println("1. Song name");
+        System.out.println("2. Artist name");
+        System.out.println("3. Genre");
+        System.out.println("4. Release Date");
+        String typeSearch = in.nextLine();
+
+        System.out.println("Would you like this in ascending or descending order?");
+        System.out.println("Enter Y (for yes) or N (for no)");
+        String result = in.nextLine();
+        boolean asc = !result.equals("N");
+
+        // I'm pretty sure that this will correctly print the list of songs from the search without any other
+        // edits. This function came in clutch!
+        SongDAO.searchSongs(conn, keyword, typeCase, typeSearch, asc);
+    }
+
+    public static void userSearcher(Connection conn, User logged_in) {
+        Scanner in = new Scanner(System.in);
+        System.out.println("Would you like to search by?");
+        System.out.println("1. Username");
+        System.out.println("2. Email");
+        int searchChoice = in.nextInt();
+        List<User> foundUsers = new ArrayList<>();
+        String response = "";
+
+        switch (searchChoice) {
             case 1:
-                typeSearch = "title";
+                System.out.println("Enter in the username:");
+                String name_of_user = in.nextLine();
+                foundUsers = daos.UserDAO.searchUsersByUsername(conn, name_of_user);
+                if (!foundUsers.isEmpty()) {
+                    System.out.println(foundUsers.getFirst());
+                    if (logged_in != null) {
+                        System.out.println("Would you also like to follow this user? (Y/N)");
+                        response = in.nextLine();
+                        if (response.equals("Y")) {
+                            daos.UserDAO.followUser(conn, logged_in.getUsername(), foundUsers.getFirst().getUsername());
+                        }
+                    }
+                } else {
+                    System.out.println(name_of_user + " was not found.");
+                }
                 break;
-            case 2, 3:
-                typeSearch = "name";
+            case 2:
+                System.out.println("Enter in the email:");
+                String email_of_user = in.nextLine();
+                foundUsers = daos.UserDAO.searchUsersByEmail(conn, email_of_user);
+                if (!foundUsers.isEmpty()) {
+                    System.out.println(foundUsers.getFirst());
+                } else {
+                    System.out.println(email_of_user + " was not found.");
+                }
                 break;
-            case 4:
-                typeSearch = "releaseDate";
         }
 
-        String relativeString = in.nextLine();
-        //daos.SongDAO.searchSongs(conn, keyword, typeCase, typeSearch, );
+        if(logged_in != null && !foundUsers.isEmpty()){
+            System.out.println("Would you also like to follow this user? (Y/N)");
+            response = in.nextLine();
+            if(response.equals("Y")){
+                daos.UserDAO.followUser(conn, logged_in.getUsername(), foundUsers.getFirst().getUsername());
+            }
+        }
+    }
+
+    public static void artistSearcher(Connection conn, User logged_in) {
+        Scanner in = new Scanner(System.in);
+        System.out.println("Enter the name of the artist:");
+        String artist_name = in.nextLine();
+
+        List<Artist> foundArtists = daos.ArtistDAO.getArtist(conn, artist_name);
+        if (!foundArtists.isEmpty()) {
+            System.out.println(foundArtists.getFirst());
+        } else {
+            System.out.println(artist_name + " was not found.");
+        }
+
+        if(logged_in != null && !foundArtists.isEmpty()){
+            System.out.println("Would you also like to follow this artist? (Y/N)");
+            String response = in.nextLine();
+            if(response.equals("Y")){
+                daos.ArtistDAO.followArtist(conn, logged_in.getUsername(), foundArtists.getFirst().getId());
+            }
+        }
+
     }
 }
